# pydantic-asyncapi

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: release.yaml  tests.yaml
pydantic_asyncapi/: __init__.py  base.py  common.py  v2.py  v3.py
pydantic_asyncapi/bindings/: amqp.py  anypointmq.py  googlepubsub.py  http.py  ibmmq.py  kafka.py  mqtt.py  nats.py  pulsar.py  sns.py  solace.py  sqs.py  websockets.py
tests/: test_asyncapi.py
tests/fixtures/v2/: simple.yaml
tests/fixtures/v3/: backend.yaml  simple.yaml
