[project]
name = "pydantic-asyncapi"
version = "0.3.1"
description = 'Pydantic models of AsyncAPI schema'
readme = "README.md"
requires-python = ">=3.9,<4.0"
license = "Apache-2.0"
keywords = ["pydantic", "asyncapi", "schema"]
authors = [{ name = "RaRhAeu", email = "rarha_eu@protonmail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Framework :: Pydantic :: 2",
]
dependencies = ["pydantic>=2.0.2,<3.0.0"]

[project.urls]
Documentation = "https://github.com/asynq-io/pydantic-asyncapi#readme"
Issues = "https://github.com/asynq-io/pydantic-asyncapi/issues"
Source = "https://github.com/asynq-io/pydantic-asyncapi"

[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "pydantic_asyncapi"
module-root = ""

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-sugar",
    "pytest-repeat",
    "pyyaml",
    "ruff",
    "mypy",
    "bandit",
    "types-pyyaml",
]

[tool.pytest.ini_options]
addopts = "--cov=./pydantic_asyncapi --count=3"
testpaths = ["./tests"]

[tool.coverage.run]
source_pkgs = ["pydantic_asyncapi", "tests"]
branch = true
parallel = true

[tool.coverage.paths]
pydantic_asyncapi = ["pydantic_asyncapi"]
tests = ["tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.pyright]
venvPath = ""
venv = ".venv"

[tool.mypy]
python_version = "3.9"
disallow_untyped_defs = false
disallow_incomplete_defs = false
follow_imports = "normal"
ignore_missing_imports = true
pretty = true
show_column_numbers = true
show_error_codes = true
warn_no_return = false
warn_unused_ignores = true
exclude = ["^\\.venv/"]

[tool.ruff]
target-version = "py39"

line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["ALL"]

ignore = [
    "A001",
    "A002",
    "ARG002",
    "ARG004",
    "ASYNC109",
    "ANN401",
    "B008",     # do not perform function calls in argument defaults
    "BLE001",
    "COM812",
    "D",
    "E501",     # line too long
    "EM101",
    "FA100",
    "FBT001",
    "FBT002",
    "FBT003",
    "FIX002",
    "ISC001",
    "N815",
    "N818",
    "PD011",
    "PLC0415",
    "PLR0913",
    "PLR2004",
    "PLW2901",
    "PTH123",
    "RUF012",
    "S108",
    "TD002",
    "TD003",
    "TRY003",
    "TRY300",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ANN001", "ANN002", "ANN003", "ANN201", "ANN202"]


[tool.bandit]
skips = ['B101']
